Borderless Window + Twitch Color Palette

--- a/client/index.html
+++ b/client/index.html
@@ -2,20 +2,21 @@
 <html ng-app="kappavision">
 <head>
   <title>KappaVision</title>
-  <script src="bower_components/angular/angular.min.js" type="text/javascript"></script>
-  <script src="bower_components/angular-route/angular-route.min.js" type="text/javascript"></script>
-  <script src="bower_components/angular-animate/angular-animate.min.js" type="text/javascript"></script>
+  <script src="bower_components/angular/angular.min.js"></script>
+  <script src="bower_components/angular-route/angular-route.min.js"></script>
+  <script src="bower_components/angular-animate/angular-animate.min.js"></script>
   <script src="bower_components/angular-aria/angular-aria.min.js"></script>
-  <script src="bower_components/angular-material/angular-material.min.js" type="text/javascript"></script>
-  <script src="src/app.js" type="text/javascript"></script>
+  <script src="bower_components/angular-material/angular-material.min.js"></script>
+  <script src="src/app.js"></script>
   <link rel="stylesheet" href="bower_components/angular-material/angular-material.min.css"/>
   <link rel="stylesheet" href="src/main.css"/>
 </head>
 <body layout="column">
 
-<md-toolbar layout="row">
+<md-toolbar style="-webkit-app-region: drag" layout="row">
   <div class="md-toolbar-tools">
-    <h3>KappaVision</h3>
+    <img src="img/Kappa.png" class="no-drag" style="height: 64px;"/>
+    <h3>Vision</h3>
   </div>
 </md-toolbar>
 
