--- a/client/index.html
+++ b/client/index.html
@@ -13,10 +13,10 @@
 </head>
 <body layout="column">
 
-<md-toolbar style="-webkit-app-region: drag" layout="row">
+<md-toolbar class="header" style="-webkit-app-region: drag" layout="row">
   <div class="md-toolbar-tools">
-    <img src="img/Kappa.png" class="no-drag" style="height: 64px;"/>
-    <h3>Vision</h3>
+    <img src="img/twitch/Twitch_WhiteLogo.png" class="no-drag logo" onclick="location.reload()"/>
+    <h3 class="app-name">Vision</h3>
   </div>
 </md-toolbar>
 
@@ -29,9 +29,9 @@
     <h4>{{helloPrefix}} {{helloName}}!</h4>
   </div>
   <div flex layout="row">
-    <img src="img/Kappa.png" class="md-shadow-bottom-z-1" style="height: 200px;"/>
-    <img src="img/Kappa.png" class="md-shadow-bottom-z-1" style="height: 200px;"/>
-    <img src="img/Kappa.png" class="md-shadow-bottom-z-1" style="height: 200px;"/>
+    <img src="img/Kappa.png" class="md-shadow-bottom-z-1" style="height: 150px;"/>
+    <img src="img/Kappa.png" class="md-shadow-bottom-z-1" style="height: 150px;"/>
+    <img src="img/Kappa.png" class="md-shadow-bottom-z-1" style="height: 150px;"/>
   </div>
 </div>
 
