--- a/client/index.html
+++ b/client/index.html
@@ -15,25 +15,44 @@
 
 <md-toolbar class="header" style="-webkit-app-region: drag" layout="row">
   <div class="md-toolbar-tools">
-    <img src="img/twitch/Twitch_WhiteLogo.png" class="no-drag logo" onclick="location.reload()"/>
-    <h3 class="app-name">Vision</h3>
+    <a href=".">
+        <img src="img/twitch/Twitch_WhiteLogo.png" class="no-drag logo"/>
+    </a>
+    <h3 class="app-name">Kappa Vision</h3>
   </div>
 </md-toolbar>
 
-<div layout="column" layout-margin class="main-content">
-  <div ng-controller="TestController">
-    <md-input-container>
-      <label>Name</label>
-      <input ng-model="helloName" placeholder="Name">
-    </md-input-container>
-    <h4>{{helloPrefix}} {{helloName}}!</h4>
-  </div>
-  <div flex layout="row">
-    <img src="img/Kappa.png" class="md-shadow-bottom-z-1" style="height: 150px;"/>
-    <img src="img/Kappa.png" class="md-shadow-bottom-z-1" style="height: 150px;"/>
-    <img src="img/Kappa.png" class="md-shadow-bottom-z-1" style="height: 150px;"/>
-  </div>
+<div layout="row" layout-margin class="main-content">
+    <div ng-controller="MainContentController">
+        <div layout="column" ng-controller="SideBarController">
+            <md-sidenav class="md-sidenav-left" md-component-id="left" md-is-locked-open="$media('gt-md')">
+                Left Nav!
+            </md-sidenav>
+        </div>
+
+        <md-content>
+            <md-button ng-click="toggleLeft()">
+                Open Left Menu
+            </md-button>
+        </md-content>
+    </div>
 </div>
+
+
+<!--<div layout="column" layout-margin class="main-content">-->
+  <!--<div ng-controller="TestController">-->
+    <!--<md-input-container>-->
+      <!--<label>Name</label>-->
+      <!--<input ng-model="helloName" placeholder="Name">-->
+    <!--</md-input-container>-->
+    <!--<h4>{{helloPrefix}} {{helloName}}!</h4>-->
+  <!--</div>-->
+  <!--<div flex layout="row">-->
+    <!--<img src="img/Kappa.png" class="md-shadow-bottom-z-1" style="height: 150px;"/>-->
+    <!--<img src="img/Kappa.png" class="md-shadow-bottom-z-1" style="height: 150px;"/>-->
+    <!--<img src="img/Kappa.png" class="md-shadow-bottom-z-1" style="height: 150px;"/>-->
+  <!--</div>-->
+<!--</div>-->
 
 </body>
 </html>
