Beginings of dynamically created palettes

--- a/client/index.html
+++ b/client/index.html
@@ -27,7 +27,7 @@
 <div layout="row" layout-margin class="main-content">
     <div ng-controller="MainContentController">
         <div layout="column" ng-controller="SideBarController">
-            <md-sidenav class="md-sidenav-left md-shadow-bottom-z-1 left-nav" md-component-id="left" md-is-locked-open="$media('gt-md')">
+            <md-sidenav class="md-sidenav-left md-shadow-bottom-z-1 left-nav" md-component-id="left">
                 Left Nav!
             </md-sidenav>
         </div>
@@ -37,6 +37,9 @@
                 Open Left Menu
             </md-button>
         </md-content>
+        <md-button class="md-raised md-primary md-hue-1">Color 1</md-button>
+        <md-button class="md-raised md-primary md-hue-2">Color 2</md-button>
+        <md-button class="md-raised md-primary md-hue-3">Color 3</md-button>
     </div>
 </div>
 
